# firefighter-reports

./: .env.dist  .gitignore  README.md  pyproject.toml
.github/workflows/: firefighter.yml  users-lib.yaml
doc/: Firefighter.json  Firefighter_pseudocode.txt  UsersLib.json  UsersLib_pseudocode.txt
src/app/: cache.py  config.py  main.py  runner.py  slack_service.py  summarizer.py
