[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firefighter-reports"
version = "0.1.0"
description = "LangChain Slack firefighter summarizer with Redis caching"
authors = [{ name = "Firefighter Reports" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
  "langchain>=0.2.14,<0.3",
  "langchain-openai>=0.1.23,<0.2",
  "langchain-anthropic>=0.1.22,<0.2",
  "langchain-community>=0.2.11,<0.3",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.4,<3",
  "python-dotenv>=1.0,<2",
  "slack_sdk>=3.33,<4",
  "redis>=5.0,<6",
  "typer>=0.12",
  "httpx>=0.27,<0.28",
]

[project.scripts]
firefighter-app = "app.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

